Edit banner image as Georgia Tech conference

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                <div class="col-md-12 ">
                   <div class="text-bg">
                      <h1>TECH SIGNAGE</h1>
-                     <!-- Elevate your service standards for potential clients, employees or guests with Tech Sign -->
-                     <p>Attract business with eye-catching Tech Signs!</p>
+                     <p>Attract business with eye-catching Tech Signs!
+                     Elevate your service standards for potential clients, employees or guests with Tech Sign</p>                     
                      <a href="#">Discover</a>
                   </div>
                </div>
@@ -128,7 +128,7 @@
                <div class="col-md-4">
                   <div class="box_text">
                      <!-- 블랙 포도 -->
-                     <figure><img src="images/coffee.jpg" alt="#"/></figure>
+                     <figure><img src="images/GT conference.jpg" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -267,8 +267,9 @@
                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 padding_left0">
                   <div class="product_box">
                      <!-- 해바라기 -->
-                     <figure><img src="images/haning banner.jpg" alt="#"/></figure>
-                     <h3 class="black">Haning Banner</h3>
+                     <figure><img src="images/GT conference.jpg" alt="#"/></figure>
+                     <!--<h3 class="black">Haning Banner</h3> -->
+                     <h3>Logo & Sign</h3>
                   </div>
                </div>
                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 padding_right0">
