--- a/products.html
+++ b/products.html
@@ -93,6 +93,7 @@
       </header>
       <!-- end header inner -->
       <!-- end header -->
+      <!-- product  section -->
       <div class="product">
          <div class="container">
             <div class="row">
@@ -129,8 +130,9 @@
                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 padding_left0">
                   <div class="product_box">
                      <!-- 해바라기 -->
-                     <figure><img src="images/haning banner.jpg" alt="#"/></figure>
-                     <h3 class="black">Haning Banner</h3>
+                     <figure><img src="images/GT conference.jpg" alt="#"/></figure>
+                     <!--<h3 class="black">Haning Banner</h3> -->
+                     <h3>Logo & Sign</h3>
                   </div>
                </div>
                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 padding_right0">
