edit some design

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                <div class="col-md-12 ">
                   <div class="text-bg">
                      <h1>TECH SIGNAGE</h1>
-                     <p>Attract business with eye-catching Tech Signs!
+                     <p>Attract business with eye-catching Tech Signs!<br>
                      Elevate your service standards for potential clients, employees or guests with Tech Sign</p>                     
                      <a href="#">Discover</a>
                   </div>
@@ -146,7 +146,7 @@
                   </div>
                </div>
                <div class="col-md-7">
-                  <div class="hottest_box">
+                  <div class="hottest_box; black">
                      <p>Tech Sign is a full service sign company that can help with any type of project, whether it is temporary signs for an occasion or a permanent stone monument for a business. We can help direct traffic and advertise for a community event or brand and create a street presence for a new business. Our professional staff design your sign and help define the material, size, color and location of your business sign based on the scope of your event or project. Most projects can be designed and produced within a week. More complex projects will require our expert advice and project management to meet completion deadlines. ​Whatever kind of sign you are looking for you came to the right place. ​Our vast range of products include exterior/interior illuminated and non-illuminated signs as well as banners, yard signs, vehicle graphics and much more. Whether you are a large chain or a small business, Tech Signs offers everything needed to complete your exterior and interior signage program, including the design, manufacture, project management, delivery and installation of your custom residential and commercial signage.</p>
                   </div>
                </div>
@@ -269,7 +269,7 @@
                      <!-- 해바라기 -->
                      <figure><img src="images/GT conference.jpg" alt="#"/></figure>
                      <!--<h3 class="black">Haning Banner</h3> -->
-                     <h3>Logo & Sign</h3>
+                     <h3>Banner</h3>
                   </div>
                </div>
                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 padding_right0">
