--- a/products.html
+++ b/products.html
@@ -132,7 +132,7 @@
                      <!-- 해바라기 -->
                      <figure><img src="images/GT conference.jpg" alt="#"/></figure>
                      <!--<h3 class="black">Haning Banner</h3> -->
-                     <h3>Logo & Sign</h3>
+                     <h3>Banner</h3>
                   </div>
                </div>
                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 padding_right0">
